k8s/namespace.yaml
# K8s 命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: yyyl
  labels:
    app.kubernetes.io/part-of: yyyl
